Fixed support button on mobile, increased spacing between advantages on mobile, added --layout-offset-x

--- a/assets/styles/vars.pcss
+++ b/assets/styles/vars.pcss
@@ -20,6 +20,7 @@
 
   --layout-container-width: 1180px;
 
+  --layout-offset-x: 10px;
 }
 
 @custom-media --small-viewport (max-width: 980px);
